[gd_scene load_steps=25 format=2]

[ext_resource path="res://scn/ChunkUnloader.gd" type="Script" id=1]
[ext_resource path="res://scn/cam_env.tres" type="Environment" id=2]
[ext_resource path="res://scn/WorldChunks.gd" type="Script" id=3]
[ext_resource path="res://scn/CollisionBox.gd" type="Script" id=4]
[ext_resource path="res://scn/CubeData.gd" type="Script" id=5]
[ext_resource path="res://scn/CubeCollisionDetect.gd" type="Script" id=6]
[ext_resource path="res://scn/OccluderManager.gd" type="Script" id=7]
[ext_resource path="res://scn/SelectorLight.gd" type="Script" id=8]
[ext_resource path="res://scn/TextureAtlas.gd" type="Script" id=9]
[ext_resource path="res://Game.gd" type="Script" id=10]
[ext_resource path="res://scn/WorldGen.gd" type="Script" id=11]
[ext_resource path="res://scn/Player.gd" type="Script" id=12]
[ext_resource path="res://scn/ExtraInfo.gd" type="Script" id=13]
[ext_resource path="res://scn/PlayerStartPosition.gd" type="Script" id=14]
[ext_resource path="res://scn/Cursor.gd" type="Script" id=15]
[ext_resource path="res://mat/selectorMat.tres" type="Material" id=16]
[ext_resource path="res://scn/WorldInteract.gd" type="Script" id=17]
[ext_resource path="res://scn/Camera.gd" type="Script" id=18]
[ext_resource path="res://ui/crosshair.png" type="Texture" id=20]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0, 0, 0 )

[sub_resource type="ArrayMesh" id=2]
surfaces/0 = {
"aabb": AABB( -0.5, 0, -0.5, 1, 1, 1 ),
"array_data": PoolByteArray( 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 128, 129, 0, 0, 0, 0, 127, 0, 127, 0, 56, 0, 56, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 128, 129, 0, 0, 0, 0, 127, 0, 127, 0, 60, 0, 56, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 191, 129, 0, 0, 0, 0, 127, 0, 127, 0, 60, 0, 0, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 129, 0, 0, 0, 0, 127, 0, 127, 0, 56, 0, 0, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 56, 0, 56, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 60, 0, 56, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 60, 0, 0, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 56, 0, 0, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 128, 127, 0, 0, 0, 0, 127, 0, 127, 0, 56, 0, 56, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 128, 127, 0, 0, 0, 0, 127, 0, 127, 0, 60, 0, 56, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 60, 0, 0, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 56, 0, 0, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 127, 0, 0, 127, 0, 127, 0, 56, 0, 56, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 63, 0, 0, 127, 0, 0, 127, 0, 127, 0, 60, 0, 56, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 63, 0, 0, 127, 0, 0, 127, 0, 127, 0, 60, 0, 0, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 127, 0, 0, 127, 0, 127, 0, 56, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 0, 0, 127, 0, 0, 127, 0, 56, 0, 56, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 0, 0, 127, 0, 0, 127, 0, 60, 0, 56, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 56, 0, 0, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 128, 0, 127, 0, 0, 129, 0, 0, 127, 0, 56, 0, 56, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 128, 0, 127, 0, 0, 129, 0, 0, 127, 0, 60, 0, 56, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 63, 0, 127, 0, 0, 129, 0, 0, 127, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 63, 0, 127, 0, 0, 129, 0, 0, 127, 0, 56, 0, 0, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 128, 0, 127, 0, 0, 129, 0, 0, 127, 0, 0, 0, 56, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 63, 0, 127, 0, 0, 129, 0, 0, 127, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 191, 0, 127, 0, 0, 129, 0, 0, 127, 0, 0, 0, 60, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 191, 0, 127, 0, 0, 129, 0, 0, 127, 0, 56, 0, 60, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 191, 0, 127, 0, 0, 129, 0, 0, 127, 0, 60, 0, 60, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 0, 0, 127, 0, 0, 127, 0, 0, 0, 56, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 0, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 56, 0, 60, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 60, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 127, 0, 0, 127, 0, 127, 0, 0, 0, 56, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 127, 0, 0, 127, 0, 127, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 127, 0, 0, 127, 0, 127, 0, 0, 0, 60, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 127, 0, 0, 127, 0, 127, 0, 56, 0, 60, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 63, 0, 0, 127, 0, 0, 127, 0, 127, 0, 60, 0, 60, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 128, 127, 0, 0, 0, 0, 127, 0, 127, 0, 0, 0, 56, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 191, 127, 0, 0, 0, 0, 127, 0, 127, 0, 0, 0, 60, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 127, 0, 0, 0, 0, 127, 0, 127, 0, 56, 0, 60, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 191, 127, 0, 0, 0, 0, 127, 0, 127, 0, 60, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 0, 0, 56, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 0, 0, 60, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 56, 0, 60, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 60, 0, 60, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 128, 129, 0, 0, 0, 0, 127, 0, 127, 0, 0, 0, 56, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 191, 129, 0, 0, 0, 0, 127, 0, 127, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 63, 129, 0, 0, 0, 0, 127, 0, 127, 0, 0, 0, 60, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 129, 0, 0, 0, 0, 127, 0, 127, 0, 56, 0, 60, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 63, 129, 0, 0, 0, 0, 127, 0, 127, 0, 60, 0, 60 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 4, 0, 7, 0, 6, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 12, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 20, 0, 22, 0, 21, 0, 20, 0, 23, 0, 22, 0, 24, 0, 23, 0, 20, 0, 24, 0, 25, 0, 23, 0, 26, 0, 20, 0, 27, 0, 26, 0, 24, 0, 20, 0, 27, 0, 21, 0, 28, 0, 27, 0, 20, 0, 21, 0, 29, 0, 19, 0, 16, 0, 29, 0, 30, 0, 19, 0, 31, 0, 16, 0, 32, 0, 31, 0, 29, 0, 16, 0, 32, 0, 17, 0, 33, 0, 32, 0, 16, 0, 17, 0, 34, 0, 15, 0, 12, 0, 34, 0, 35, 0, 15, 0, 36, 0, 12, 0, 37, 0, 36, 0, 34, 0, 12, 0, 37, 0, 13, 0, 38, 0, 37, 0, 12, 0, 13, 0, 39, 0, 11, 0, 8, 0, 39, 0, 40, 0, 11, 0, 41, 0, 8, 0, 42, 0, 41, 0, 39, 0, 8, 0, 42, 0, 9, 0, 43, 0, 42, 0, 8, 0, 9, 0, 44, 0, 7, 0, 4, 0, 44, 0, 45, 0, 7, 0, 46, 0, 4, 0, 47, 0, 46, 0, 44, 0, 4, 0, 47, 0, 5, 0, 48, 0, 47, 0, 4, 0, 5, 0, 49, 0, 3, 0, 0, 0, 49, 0, 50, 0, 3, 0, 51, 0, 0, 0, 52, 0, 51, 0, 49, 0, 0, 0, 52, 0, 1, 0, 53, 0, 52, 0, 0, 0, 1, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 144,
"material": ExtResource( 16 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 54
}

[sub_resource type="BoxShape" id=3]

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.101961 )

[sub_resource type="CubeMesh" id=5]
material = SubResource( 4 )
size = Vector3( 1, 1, 1 )

[node name="Game" type="Node"]
script = ExtResource( 10 )

[node name="WorldChunks" type="Node" parent="."]
script = ExtResource( 3 )

[node name="WorldGen" type="Node" parent="."]
script = ExtResource( 11 )

[node name="WorldInteract" type="Node" parent="."]
script = ExtResource( 17 )

[node name="ChunkUnloader" type="Node" parent="."]
script = ExtResource( 1 )

[node name="TextureAtlas" type="Node" parent="."]
script = ExtResource( 9 )

[node name="CubeData" type="Node" parent="."]
script = ExtResource( 5 )

[node name="OccluderManager" type="Node" parent="."]
script = ExtResource( 7 )

[node name="CubeCollision" type="Spatial" parent="."]
script = ExtResource( 6 )

[node name="Player" type="KinematicBody" parent="."]
script = ExtResource( 12 )

[node name="CollisionBox" type="CollisionShape" parent="Player"]
shape = SubResource( 1 )
script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="Player"]
environment = ExtResource( 2 )
current = true
fov = 90.0
near = 0.01
far = 8192.0
script = ExtResource( 18 )

[node name="PlayerLight" type="OmniLight" parent="Player/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.167, 0.5 )
light_energy = 6.0
shadow_enabled = true

[node name="RayCaster" type="RayCast" parent="Player/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -10000 )
collide_with_areas = true

[node name="TimerJumpCooldown" type="Timer" parent="Player"]
wait_time = 0.5
one_shot = true

[node name="PlayerStartPosition" type="Node" parent="."]
script = ExtResource( 14 )

[node name="SelectorLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0.5 )
light_energy = 6.0
shadow_enabled = true
script = ExtResource( 8 )

[node name="SunAngle" type="DirectionalLight" parent="."]
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 8, 8, 8 )
light_energy = 16.0
shadow_enabled = true
directional_shadow_mode = 0
directional_shadow_blend_splits = true

[node name="BlockSelector" type="Spatial" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="SelectorMesh" type="MeshInstance" parent="BlockSelector"]
transform = Transform( 1.002, 0, 0, 0, 1.002, 0, 0, 0, 1.002, 0.5, -0.001, 0.5 )
cast_shadow = 0
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_edit_lock_": true
}

[node name="BlockPlacer" type="Area" parent="."]
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="BlockPlacer"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.5, 0.5, 0.5 )
shape = SubResource( 3 )

[node name="ShowPlacer" type="MeshInstance" parent="BlockPlacer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0.5 )
visible = false
mesh = SubResource( 5 )
material/0 = null

[node name="Timer" type="Timer" parent="BlockPlacer"]
wait_time = 0.02
one_shot = true

[node name="Crosshair" type="Position2D" parent="."]
script = ExtResource( 15 )

[node name="CrosshairSprite" type="Sprite" parent="Crosshair"]
texture = ExtResource( 20 )

[node name="ExtraInfo" type="Label" parent="."]
anchor_left = 0.02
anchor_right = 1.0
margin_left = -25.6
margin_right = -1280.0
margin_bottom = 14.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Player/TimerJumpCooldown" to="Player" method="_on_PreventJump_timeout"]
[connection signal="body_shape_entered" from="BlockPlacer" to="Player" method="_on_BlockPlacer_body_shape_entered" flags=3]
[connection signal="body_shape_exited" from="BlockPlacer" to="Player" method="_on_BlockPlacer_body_shape_exited" flags=3]
[connection signal="timeout" from="BlockPlacer/Timer" to="BlockPlacer" method="_on_Timer_timeout"]
